--- a/former.html
+++ b/former.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!-- Add the Bootstrap CSS link here -->
+ 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
+
+  <style>
+    /* flex property using this container */
+    .container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 10vh;
+      flex-direction: column;
+    }
+
+    /*  padding and margins */
+    .container .admini {
+      padding: 20px;
+      margin: 20px;
+    }
+
+    /* adjusting margin images */
+    .container .admini img {
+      margin: 10px ;
+    }
+  </style>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: darkgrey;">
     <div class="container">
       
@@ -124,6 +146,36 @@
   </div>
 </div>
 
+<div id="footer-widgets" class="py-4" style="background-color: #253b80;">
+  <div class="container" style="color: aliceblue;">
+      <div class="row">
+          <div class="col-md-6">
+              <div class="footer-widget">
+                  <ul class="list-unstyled mb-0" style="font-family: Verdana, Geneva, sans-serif; font-size: 20px;">
+                      <li><b>Visitors today :</b> <span>99</span></li>
+                  </ul>
+              </div>
+          </div>
+          <div class="col-md-6 text-md-end">
+              <div class="footer-widget">
+                  <ul class="list-unstyled mb-0" style="font-family: Verdana, Geneva, sans-serif; font-size: 20px;">
+                      <li><b>Total visitors :</b> <span>170,765</span></li>
+                  </ul>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
+
+
+<footer class="footer text-center" style="background-color: darkblue; padding-top: 20px; padding-bottom: 20px;">
+  <div class="container">
+      <p class="mb-0" style="color: white;">
+          © Copyright  All rights reserved. <br>
+          ST Hindu College by <a href="http://www.sthinducollege.com" style="color: white;">S.T. Hindu college</a>
+      </p>
+  </div>
+</footer>
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
