--- a/host.html
+++ b/host.html
@@ -8,6 +8,27 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body>
+    <style>
+
+    .container.my-5 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+
+  
+    .hostel {
+        max-width: 800px;
+        margin-bottom: 20px;
+    }
+
+    #image {
+        max-width: 100%;
+        margin-top: 20px;
+    }
+</style>
 
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: darkgrey;">
         <div class="container">
@@ -123,6 +144,38 @@
         </div>
     </div>
 
+
+
+    <div id="footer-widgets" class="py-4" style="background-color: #253b80;">
+        <div class="container" style="color: aliceblue;">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="footer-widget">
+                        <ul class="list-unstyled mb-0" style="font-family: Verdana, Geneva, sans-serif; font-size: 20px;">
+                            <li><b>Visitors today :</b> <span>99</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-6 text-md-end">
+                    <div class="footer-widget">
+                        <ul class="list-unstyled mb-0" style="font-family: Verdana, Geneva, sans-serif; font-size: 20px;">
+                            <li><b>Total visitors :</b> <span>170,765</span></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+      </div>
+      
+      
+      <footer class="footer text-center" style="background-color: darkblue; padding-top: 20px; padding-bottom: 20px;">
+        <div class="container">
+            <p class="mb-0" style="color: white;">
+                © Copyright  All rights reserved. <br>
+                ST Hindu College by <a href="http://www.sthinducollege.com" style="color: white;">S.T. Hindu college</a>
+            </p>
+        </div>
+      </footer>
  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
