--- a/news.html
+++ b/news.html
@@ -4,11 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>News</title>
-
+    <link rel="stylesheet" href="sthc.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 </head>
-<body>
+<body style="letter-spacing: 0;">
+
+    <style>
+    
+       .nav-item {
+           letter-spacing: 0;
+       }
+       .d-flex {
+           display: flex;
+       }
+       .justify-content-center {
+           justify-content: center;
+       }
+       .align-items-center {
+           align-items: center;
+       }
+       .p-3 {
+           padding: 0.75rem;
+       }
+       .fs-5 {
+           font-size: 2rem;
+       }
+       .mb-4 {
+           margin-bottom: 1rem;
+       }
+       .container-box {
+           background-color: #fff;
+           padding: 20px;
+           border-radius: 10px;
+           box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+       }
+       </style>
+
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: darkgrey;">
         <div class="container">
           
@@ -155,8 +187,6 @@
         </div>
     </div>
 </div>
-
-
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css">
 
