--- a/smart.html
+++ b/smart.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Smart Classroom</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
+</head>
+<body>
+    <style>
+         .container {
+            margin-top: 20px;
+        }
+
+        .d-flex {
+            display: flex;
+            justify-content: center;
+        }
+
+        .img-fluid {
+            max-width: 500px;
+        }
+    </style>
+    </style>
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: darkgrey;">
         <div class="container">
           
@@ -92,9 +110,7 @@
 
 
    
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
-</head>
-<body>
+
     <div class="container mt-5">
         <!---margintop mt-->
         <div class="d-flex justify-content-center">
@@ -102,10 +118,6 @@
         </div>
     </div>
 
-   
-   
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js">
 
-    </script>
 </body>
 </html>
