--- a/visionmision.html
+++ b/visionmision.html
@@ -7,6 +7,25 @@
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
 </head>
+<body>
+    <style>
+    .container {
+        margin-top: 20px;
+    }
+
+    .content {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 80vh;
+    }
+    .entry {
+        max-width: 800px;
+        padding: 20px;
+        border: 1px solid #ccc;
+        border-radius: 10px;
+    }
+</style>
 
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: darkgrey;">
     <div class="container">
@@ -94,7 +113,6 @@
 
 </script>
 
-<body>
     <div class="container mt-5">
         <div class="row">
             <div class="col-12">
