--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
 <div class="menu-main-container">
   <section class="header" style="letter-spacing: normal; font-size: medium;">
-      <img src=".vscode/cropped-logoo.png" 
+      <img src="img folder/cropped-logoo.png" 
       <a style="color: white;" href="https://www.msuniv.ac.in/" target="_blank"></a>
       <p style="letter-spacing: -0.5px;">S.T. HINDU COLLEGE
           <br>
@@ -300,31 +300,31 @@
   </div>
   <div class="row">
     <div class="col-md-1">
-      <img src=".vscode/1.png" alt="Image 1" class="img-fluid mx-auto">
+      <img src="img folder/1.png" alt="Image 1" class="img-fluid mx-auto">
       <p class="text-center">NCC</p>
     </div>
     <div class="col-md-1">
-      <img src=".vscode/2.png" alt="Image 2" class="img-fluid mx-auto">
+      <img src="img folder/2.png" alt="Image 2" class="img-fluid mx-auto">
       <p class="text-center">MS university</p>
     </div>
     <div class="col-md-1">
-      <img src=".vscode/3.png" alt="Image 3" class="img-fluid mx-auto">
+      <img src="img folder/3.png" alt="Image 3" class="img-fluid mx-auto">
       <p class="text-center">TNOU</p>
     </div>
     <div class="col-md-1">
-      <img src=".vscode/4.png" alt="Image 4" class="img-fluid mx-auto">
+      <img src="img folder/4.png" alt="Image 4" class="img-fluid mx-auto">
       <p class="text-center">UGC</p>
     </div>
     <div class="col-md-1">
-      <img src=".vscode/5.png" alt="Image 5" class="img-fluid mx-auto">
+      <img src="img folder/5.png" alt="Image 5" class="img-fluid mx-auto">
       <p class="text-center">IGNOU</p>
     </div>
     <div class="col-md-1">
-      <img src=".vscode/6.png" alt="Image 6" class="img-fluid mx-auto">
+      <img src="img folder/6.png" alt="Image 6" class="img-fluid mx-auto">
       <p class="text-center">ICTACT</p>
     </div>
     <div class="col-md-1">
-      <img src=".vscode/7.png" alt="Image 7" class="img-fluid mx-auto">
+      <img src="img folder/7.png" alt="Image 7" class="img-fluid mx-auto">
       <p class="text-center">NSS</p>
     </div>
   </div>
@@ -338,7 +338,7 @@
     <div class="row">
       <div class="col">
     <div class="card" style="width:18rem;">
-    <img src=.vscode/gal1.jpg alt="gallery1" class="card-img-top">
+    <img src= "img folder/gal1.jpg" alt="gallery1" class="card-img-top">
     <div class="card-body">
       <h13><b> GALLERY</b></h13>
     </div>
@@ -347,7 +347,7 @@
 
   <div class="col">
   <div class="card" style="width:18rem;">
-  <img src=.vscode/gal2.jpg alt="gallery2" class="card-img-top">
+  <img src="img folder/gal2.jpg" alt="gallery2" class="card-img-top">
   <div class="card-body">
   <h14><b> GALLERY 2</b></h14>
   </div>
