--- a/motto&founder.html
+++ b/motto&founder.html
@@ -137,16 +137,16 @@
         </p>
         <!----full screen flexbox d-flex---->
         <div class="d-flex justify-content-center align-items-center mb-4">
-            <img src=".vscode/foun1.jpg" alt="foun1"  class="p-3">
-            <img src=".vscode/foun2.jpg" alt="foun2"  class="p-3">
-            <img src=".vscode/foun3.jpg" alt="foun3"  class="p-3">
-            <img src=".vscode/foun4.jpg" alt="foun4"  class="p-3">
+            <img src="img folder/foun1.jpg" alt="foun1"  class="p-3">
+            <img src="img folder/foun2.jpg" alt="foun2"  class="p-3">
+            <img src="img folder/foun3.jpg" alt="foun3"  class="p-3">
+            <img src="img folder/foun4.jpg" alt="foun4"  class="p-3">
         </div>
         <div class="d-flex justify-content-center align-items-center">
-            <img src=".vscode/foun5.jpg" alt="foun5"  class="p-3">
-            <img src=".vscode/foun6.jpg" alt="foun6"  class="p-3">
-            <img src=".vscode/found7.jpg" alt="found7" class="p-3">
-            <img src=".vscode/found8.jpg" alt="found8" class="p-3">
+            <img src="img folder/foun5.jpg" alt="foun5"  class="p-3">
+            <img src="img folder/foun6.jpg" alt="foun6"  class="p-3">
+            <img src="img folder/foun7.jpg" alt="found7" class="p-3">
+            <img src="img folder/foun8.jpg" alt="found8" class="p-3">
         </div>
     </div>
 
